

Version NEXT
============

:Released: FUTURE
:Maintainer: UNKNOWN <unknown@example.org>

Bugs Fixed:

* Migrate to use the explicitly-maintained ‘packaging’ library.

  The package bundled in ‘setuptools.extern.packaging’ is to help make that
  package self-contained, but is not a supported API.

  Closes: Pagure #73. Thanks to Michał Górny for the report.


Version 3.0.1
=============

:Released: 2023-03-08
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Bugs Fixed:

* Declare dependency on Setuptools >= 62.4.0.

  This is necessary for establishing the version information via Setuptools. We
  use ‘setuptools.command.build’, `introduced in Setuptools version 62.4.0
  <https://setuptools.pypa.io/en/stable/history.html#v62-4-0>`_.

  Closes: Pagure #74. Thanks to Edison Wong for the report.

Added:

* PyPA recommended Project URLs for the distribution.


Version 3.0.0
=============

:Released: 2023-03-04
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Bugs Fixed:

* Refactor calculation of file descriptor ranges to close.

  When the range of candidate file descriptors is very large, the code that
  computes file descriptors to close when the daemon starts attempted to
  allocate a large amount of memory and took a long time to compute.

  Thanks to Alex Pyrgiotis for the timing test case.

  This change avoids that resource-intensive computation, and significantly
  improves the performance when importing the module and when starting the
  daemon.

  Thanks to Igor Kholopov for the implementation.

  Closes: Pagure #72. Thanks to Anton Anton for the report.

Added:

* Document a `ServiceRunner` class as an example of using `DaemonContext`.

Changed:

* Raise a TypeError if any `exclude` values are not valid file descriptors.

  Formerly, an invalid value might be silently ignored.

  Thanks to Igor Kholopov for the suggestion.

* Migrate package version handling to use Setuptools API.

  The Distutils library is deprecated for direct use; see